feat: add tests to servlets, repositories, and service layer. refactor: simplify everything in tests